envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/admin." }
                          route: { cluster: admin-service, timeout: 0s, max_stream_duration: { grpc_timeout_header_max: 0s } }
                        
                        - match: { prefix: "/auth." }
                          route: { cluster: auth-service, timeout: 0s, max_stream_duration: { grpc_timeout_header_max: 0s } }
                        
                        - match: { prefix: "/user." }
                          route: { cluster: user-service, timeout: 0s, max_stream_duration: { grpc_timeout_header_max: 0s } }
                        
                        - match: { prefix: "/chat." }
                          route: { cluster: chat-service, timeout: 0s, max_stream_duration: { grpc_timeout_header_max: 0s } }
                        
                        - match: { prefix: "/notification." }
                          route: { cluster: notification-service, timeout: 0s, max_stream_duration: { grpc_timeout_header_max: 0s } }
                      
                      cors:
                        allow_origin_string_match:
                          - exact: "http://localhost:3000"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: authorization,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        expose_headers: grpc-status,grpc-message,grpc-status-details-bin
                        max_age: "1728000"
                        allow_credentials: true
                
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

                access_log:
                  # - name: envoy.access_loggers.file
                  #   typed_config:
                  #     "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  #     path: "/dev/stdout"
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      log_format:
                        text_format: |
                          [Envoy] %START_TIME% %REQ(:METHOD)% %REQ(:PATH)% %PROTOCOL% %RESPONSE_CODE% %RESPONSE_FLAGS% %DURATION%ms %RESP(grpc-status)% %UPSTREAM_HOST% %REQ(X-GRPC-WEB)%

  clusters:
    - name: admin-service
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      load_assignment:
        cluster_name: admin-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: admin-service
                      port_value: 9091
    
    - name: auth-service
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      load_assignment:
        cluster_name: auth-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: auth-service
                      port_value: 9092

    - name: user-service
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      load_assignment:
        cluster_name: user-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: user-service
                      port_value: 9093

    - name: chat-service
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      load_assignment:
        cluster_name: chat-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: chat-service
                      port_value: 9094

    - name: notification-service
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      load_assignment:
        cluster_name: notification-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: notification-service
                      port_value: 9095
